deps/v8/test/message/fail/modules-cycle1.out
*%(basename)s:5: SyntaxError: Detected cycle while resolving name 'a' in 'modules-cycle1.mjs'
import {a} from "modules-cycle1.mjs";
        ^
SyntaxError: Detected cycle while resolving name 'a' in 'modules-cycle1.mjs'

